--- a/.gitignore
+++ b/.gitignore
@@ -246,3 +246,4 @@ ModelManifest.xml
 /Files/SentimentAnalysisDataset.csv
 /Files/SentimentAnalysisDataset.txt
 /Files/SentimentAnalysisDataset_p.txt
+/Files/p.zip
